<resources>
    <string name="action_share">Share</string>
    <string name="app_name">Lock</string>
    <string name="action_settings">Settings</string>
    <string name="default_settings">Reset Settings</string>
    <string name="lock">Lock</string>
    <string name="lockm">LOCK</string>
    <string name="unlock">Unlock</string>
    <string name="unlockm">UNLOCK</string>
    <string name="empty_password">Empty password</string>
    <string name="re_password">re-enter password</string>
    <string name="nomatch_password">The passwords do not match.</string>
    <string name="working">Working</string>
    <string name="error">Error</string>
    <string name="open">Open</string>
    <string name="openm">OPEN</string>
    <string name="extract">extract</string>
    <string name="extractm">EXTRACT</string>
    <string name="password">Password</string>
    <string name="repassword">Re-enter the password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="files">%1$s Files</string>
    <string name="file">1 File</string>
    <string name="send_to">Send to</string>
    <string name="retry">Retry</string>
    <string name="donate_desc">This app is free, without ads, and you can find the source code on github. If you find that this was useful, it would be good of you to donate a few pennies to the coffee. Donating is the best way to contribute to new features and every little bit counts.</string>
    <string name="error_general_desc">Oops, an error occurred, try again later</string>
    <string name="r0">This app is free, without ads, and you can find the source code on &lt;a href=https://github.com/lockapp/androidapp>github&lt;/a>. If you find that this was useful, it would be good of you to donate a few pennies to the coffee. Donating is the best way to contribute to new features and every little bit counts. You can find some FAQs below.</string>
    <string name="r00">This app is free, without ads, and you can find the source code on &lt;a href=https://github.com/lockapp/androidapp>github&lt;/a>.\nYou can find some FAQs below.</string>
    <string name="q1">Is Lock safe?</string>
    <string name="r1">The short answer is yes.\nBut in reality, this is a bit longer; in many parts of the application it talks about blocking due to many users not being familiar with term such as encrypting, but what really happens is that your information is encrypted using AES; the same state-of-the-art encryption algorithm used as the national standard in the United States. Lock uses 256-bit keys for encryption, which means that it would take millions of years for a criminal to decrypt your data using a brute force attack.</string>
    <string name="q2">Is my information protected?</string>
    <string name="r2">The difference from other applications is that it has only one permission. It can only access external storage (SD Card) to encrypt your files.\nOn the other hand, Lock is hosted on github and anyone who wishes to may see it.</string>
    <string name="q3">Can I share encrypted files?</string>
    <string name="r3">Yes, to share an encrypted file, you have to open it and find the share icon in the action bar of the files viewer that incorporates Lock.</string>
    <string name="intro_tittle0">Take a look at the Lock operation.</string>
    <string name="intro_desc0">With Lock, you can lock any file easily and safely</string>
    <string name="ok1">Understand</string>
    <string name="skip">Skip</string>
    <string name="encrypt">Encrypt</string>
    <string name="yourdatasafe">Your data is safe</string>
    <string name="workcomplete">The work has been finalised</string>
    <string name="enterhere">[Enter your message here]</string>
    <string name="action_rate">Rate this app</string>
    <string name="share_subject">Check out this app!</string>
    <string name="z_loading_tasks_error">Error loading vaults</string>
    <string name="z_edit">Edit</string>
    <string name="z_edit_task">Edit</string>
    <string name="name_vault">Vault Name</string>
    <string name="empty_name">Vault name must not be empty!</string>
    <string name="exists_vault_whith_name">A vault with that name already exists</string>
    <string name="migrarTitleActivity">Update</string>
    <string name="error_open_file">Error when open file</string>
    <string name="migrando_vault">Updating vault...</string>
    <string name="vault_1">Vault:  %1$s</string>
    <string name="loading">Loading ...</string>
    <string name="error_open_vault">Error when open vault</string>
    <string name="menu_lista">List</string>
    <string name="delete">Delete</string>
    <string name="action_undo">Undo</string>
    <string name="notice_removed">Item removed</string>
    <string name="choose_file">Select a file</string>
    <string name="aniadiendo_archivos">Adding Files</string>
    <string name="desbloqueando_archivo">Unlocking files</string>
    <string name="selecione_la_bobeda_a_aniadir">Select the vault</string>
    <string name="menu_grid">Grid</string>
    <string name="contacto">Contact</string>
    <string name="preguntasFrecuentes">FAQs</string>
    <string name="share">Share</string>
    <string name="valorar">Rate this app</string>
    <string name="Share">Share</string>
    <string name="contenido_bobeda_vacio_titulo">Add your first file</string>
    <string name="lista_bobeda_vacio_titulo">Create your first vault</string>
    <string name="archivo_no_encontrado">File not found: </string>
    <string name="string_intro">With Lock, you can lock any file easily and safely.\n Encrypted files are saved in a folder called Lock located in the home directory of your device. That\'s why we need your files\' permission.</string>
    <string name="z_add_task">Create Vault</string>
    <string name="empty_vault_message">Vault cannot be empty</string>
    <string name="extrayendo_archivo">Extracting Files ...</string>
    <string name="archivo_extraido_correcto">File successfully unblocked</string>
    <string name="archivo_desbloqueado_correcto">File successfully unblocked</string>
    <string name="contenido_bobeda_vacio_descripcion">This vault is empty, tap to add your first file</string>
    <string name="lista_bobeda_vacio_descripcion">Tap to create your first vault, and within it you can save files safely</string>
    <string name="abrir_boveda">Open vault</string>
    <string name="actualPassword">Actual Password</string>
    <string name="edit">Edit</string>
    <string name="delete_message">Are you sure to delete?</string>
    <string name="error_delete_file">Failed to delete file</string>
    <string name="webSite">Website</string>
    <string name="activity_backup_drive_automatic">Automatic backup</string>
    <string name="activity_backup_drive_desc">Backing up your data to Google Drive allows you to restore all your readings in case you lose or change devices. A maximum of 7 backups will be saved by vault, then the oldest ones will be deleted</string>
    <string name="activity_backup_drive_message_restaurada">Restored vault.</string>
    <string name="activity_backup_drive_success">Vault successfully backed up to Drive</string>
    <string name="activity_backup_drive_restore_success">Successfully restored database from Drive</string>
    <string name="activity_backup_drive_failed">Something went wrong. Please try again :/</string>
    <string name="activity_backup_drive_last">Last backup:</string>
    <string name="activity_backup_drive_folder">Backup folder</string>
    <string name="activity_backup_drive_folder_not_set">Not set</string>
    <string name="activity_backup_drive_button_backup">Backup now</string>
    <string name="activity_backup_drive_recent">Recent backups</string>
    <string name="activity_backup_drive_more">See more Backups</string>
    <string name="activity_backup_drive_dialog_restore_title">Revert to previous version</string>
    <string name="activity_backup_drive_dialog_restore_desc">Restoring the backup will overwrite all the existing data with the backup.</string>
    <string name="activity_backup_drive_dialog_restore_details">Backup details</string>
    <string name="activity_backup_drive_dialog_restore_button_cancel">Cancel</string>
    <string name="activity_backup_drive_dialog_restore_button_restore">Restore backup</string>
    <string name="activity_backup_drive_button_restore">Restore from Drive</string>
    <string name="activity_backup_drive_error_restore">Unable to find a valid backup to restore from Drive</string>
    <string name="activity_main_error_play_services">Lock needs Play Services to enable Google Drive backup.</string>
    <string name="activity_backup_drive_button_open_drive">Manage on Drive</string>
    <string name="title_activity_backup_drive">Google Drive Backup</string>
    <string name="activity_main_dialog_backup_export_title">Backup &amp; Export</string>
    <string name="activity_main_dialog_csv_title">Exportar en archivo CSV</string>
    <string name="Respaldo">Backup</string>
    <string name="configuracion_sin_configurar">The backups are unconfigured. To enable this option you need to select a folder in Google Drive where your backups will be saved</string>
    <string name="habilitar_respaldos">Enable backups</string>
    <string name="respaldo_automatico">Automatic backup</string>
    <string name="publicidad">Advertising...</string>
    <string name="campo_no_vacio">This field can not be empty</string>
    <string name="Donar">Donate</string>
    <string name="title_activity_donate">DonateActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>