<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rodrigo.lock.app.presentation.MainActivity" >

    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_rate"
        android:icon="@drawable/ic_action_toggle_star"
        android:title="@string/action_rate"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
