<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/preguntasFrecuentes"
        android:icon="@drawable/z_ic_help_black_24px"
        android:title="@string/preguntasFrecuentes" />
    <item
        android:id="@+id/compartir"
        android:icon="@drawable/z_ic_share_black"
        android:title="@string/share" />
    <item
        android:id="@+id/rate"
        android:icon="@drawable/z_ic_star_black_24dp"
        android:title="@string/valorar" />
    <item
        android:id="@+id/contacto"
        android:icon="@drawable/z_ic_email_black"
        android:title="@string/contacto" />
    <!--<item-->
        <!--android:id="@+id/tutorial"-->
        <!--android:icon="@drawable/ic_statistics"-->
        <!--android:title="@string/tutorial" />-->
</menu>