<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_backup_drive_dialog_restore_title"
        android:textColor="@color/glucosio_text_dark"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_backup_drive_dialog_restore_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_backup_drive_dialog_restore_details"
        android:textAllCaps="true"
        android:textColor="@color/glucosio_text_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_backup_restore_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="22/12/1997" />
    <TextView
        android:id="@+id/dialog_backup_restore_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="22/12/1997" />

    <TextView
        android:id="@+id/dialog_backup_restore_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="1.2MB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_backup_restore_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/activity_backup_drive_dialog_restore_button_cancel"
            android:textColor="@color/ab_accent"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_backup_restore_button_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/activity_backup_drive_dialog_restore_button_restore"
            android:textColor="@color/ab_accent"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>