<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->




<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="188dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Toolbar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:background="@null"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:behavior_overlapTop="88dp">



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                card_view:cardCornerRadius="2dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:layout_margin="16dp">

<!--

                    <TextView
                        android:id="@+id/nombreVault"
                        android:text="TextView"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#ffc8c8c8" />
-->





                    <TextView
                        android:gravity="center"
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/r00"
                        android:id="@+id/r0" />

                    <TextView
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:textColor="@color/colorPrimaryDark"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1"
                        android:textStyle="bold" />
                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/r1"/>

                    <TextView
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:textColor="@color/colorPrimaryDark"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2"
                        android:textStyle="bold" />
                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/r2"/>

                    <TextView
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:textColor="@color/colorPrimaryDark"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3"
                        android:textStyle="bold" />
                    <TextView
                        android:textColor="@color/colorPrimary"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/r3"/>





                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>






    </android.support.v4.widget.NestedScrollView>




</android.support.design.widget.CoordinatorLayout>









