<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">

    <com.rodrigo.lock.app.presentation.UI.scrollActionbar.NotifyingScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">


            <FrameLayout
                android:id="@+id/fake_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_bar"></FrameLayout>

            <TextView

                android:textColor="@color/bg_primario"
                android:paddingTop="@dimen/activity_small_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Version: 0.0.0"
                android:id="@+id/version" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:textColor="@color/bg_primario"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tut"
                    android:id="@+id/tutorial"
                    android:gravity="center"
                    android:background="@null" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="#ffc8c8c8"/>

                <Button
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:textColor="@color/bg_primario"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cons"
                    android:id="@+id/contacto"
                    android:gravity="center"
                    android:background="@null"/>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffc8c8c8"/>
            <Button
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donar"
                android:id="@+id/donar"
                android:layout_gravity="center_horizontal|right"
                style="@style/btnPrimary"/>

            <TextView
                android:gravity="center"
                android:textColor="@color/bg_primario"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r0"
                android:id="@+id/r0" />

            <TextView
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@color/bg_primario"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textStyle="bold" />
            <TextView
                android:textColor="@color/bg_primario"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r1"/>

            <TextView
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@color/bg_primario"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textStyle="bold" />
            <TextView
                android:textColor="@color/bg_primario"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r2"/>

            <TextView
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@color/bg_primario"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textStyle="bold" />
            <TextView
                android:textColor="@color/bg_primario"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r3"/>

        </LinearLayout>
    </com.rodrigo.lock.app.presentation.UI.scrollActionbar.NotifyingScrollView>




    <FrameLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_bar"
            android:background="@color/bg_primario">

        <com.rodrigo.lock.app.presentation.UI.scrollActionbar.KenBurnsView
            android:id="@+id/header_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bgfiles"
            android:scaleType="center" />

        <ImageView
            android:id="@+id/header_logo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/lock_open" />
    </FrameLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</FrameLayout>